--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 body {
-  background: navyblue;
+  background: blue;
 }
