--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@
   width: 50%;
 }
 
+.retro {
+  border-radius: 8px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   background: blue;
 }
