--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,11 @@
 }
 
 header {
-  background: gray;
-  margin: 20px 20px 20px 20px;
+  background: white;
+  color: #333;
+  margin: 100px 10px;
+  width: 150px;
+  padding: 20px;
 }
 
 img {
@@ -23,14 +26,14 @@ img {
 }
 
 body {
-  background: steelblue;
+  background: #333;
   color: white;
+  padding: 10px;
 }
 
 h3 {
   font-size: 40px;
   font-family: sans-serif;
-  color: salmon;
 }
 
 p {
