--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,29 @@ body {
   padding: 10px;
 }
 
+h1 {
+  font-size: 60px;
+  font-family: sans-serif;
+  color: #333;
+  background: white;
+  margin: 100px 10px;
+  width: 250px;
+  padding: 20px;
+}
+
 h3 {
   font-size: 40px;
   font-family: sans-serif;
+}
+
+h5 {
+  font-size: 12px;
+  font-family: sans-serif;
+  color: #333;
+  background: white;
+  margin: 0px 10px 100px;
+  width: 250px;
+  padding: 5px;
 }
 
 p {
