--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h1 {
   font-family: sans-serif;
   color: #333;
   background: white;
-  margin: 100px 10px;
+  margin: 100px 10px 0px;
   width: 250px;
   padding: 20px;
 }
