--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,11 @@ body {
   background: #333;
   color: white;
   padding: 10px;
+  font-family: sans-serif;
 }
 
 h1 {
   font-size: 60px;
-  font-family: sans-serif;
   color: #333;
   background: white;
   margin: 100px 10px 0px;
@@ -43,20 +43,17 @@ h1 {
 
 h3 {
   font-size: 40px;
-  font-family: sans-serif;
 }
 
 h5 {
   font-size: 12px;
-  font-family: sans-serif;
   color: #333;
   background: white;
-  margin: 0px 10px 20px;
+  margin: 0px 10px;
   width: 250px;
   padding: 0px 20px 20px;
 }
 
 p {
   font-size: 20px;
-  font-family: sans-serif;
 }
