--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,16 @@ h5 {
 p {
   font-size: 20px;
 }
+
+a:link, a:visited {
+  color: cyan;
+  text-decoration: none;
+}
+
+a:hover {
+  color: steelblue;
+}
+
+a:active {
+  color: blue;
+}
