--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
 }
 
 header {
-  background: white;
-  color: #333;
+  background: #FBFAFE;
+  color: #3a393c;
   margin: 100px 10px;
   width: 250px;
   padding: 20px;
@@ -26,16 +26,16 @@ img {
 }
 
 body {
-  background: #333;
-  color: white;
+  background: #3a393c;
+  color: #FBFAFE;
   padding: 10px;
   font-family: sans-serif;
 }
 
 h1 {
   font-size: 60px;
-  color: #333;
-  background: white;
+  color: #3a393c;
+  background: #FBFAFE;
   margin: 100px 10px 0px;
   width: 250px;
   padding: 20px 20px 0px;
@@ -47,8 +47,8 @@ h3 {
 
 h5 {
   font-size: 12px;
-  color: #333;
-  background: white;
+  color: #3a393c;
+  background: #FBFAFE;
   margin: 0px 10px;
   width: 250px;
   padding: 0px 20px 20px;
@@ -59,14 +59,16 @@ p {
 }
 
 a:link, a:visited {
-  color: cyan;
+  color: #4DE1E1;
+  opacity: 50%
   text-decoration: none;
 }
 
 a:hover {
-  color: steelblue;
+  color: #4d8ee1;
+  opacity: 50%
 }
 
 a:active {
-  color: blue;
+  color: #4d8ee1;
 }
