--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,15 @@ h5 {
   padding: 0px 20px 20px;
 }
 
+h6 {
+  font-size: 10px;
+  color: #3a393c;
+  background: #FBFAFE;
+  margin: 0px 10px;
+  width: 250px;
+  padding: 0px 20px 20px;
+}
+
 p {
   font-size: 20px;
 }
