--- a/css/style.css
+++ b/css/style.css
@@ -69,13 +69,13 @@ p {
 
 a:link, a:visited {
   color: #4DE1E1;
-  opacity: 50%
+  opacity: 50%;
   text-decoration: none;
 }
 
 a:hover {
   color: #4d8ee1;
-  opacity: 50%
+  opacity: 50%;
 }
 
 a:active {
