Editing some content

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ h6 {
   background: #FBFAFE;
   margin: 0px 10px;
   width: 500px;
-  padding: 0px 20px;
+  padding: 5px 20px;
 }
 
 p {
@@ -77,5 +77,5 @@ a:hover {
 }
 
 a:active {
-  color: #4d8ee1;
+  color: #123767;
 }
