--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
   margin: 10px;
 }
 
+.top_band {
+  height: 100px;
+}
+
 header {
   background: #FBFAFE;
   color: #3a393c;
@@ -43,9 +47,9 @@ h1 {
   font-size: 60px;
   color: #3a393c;
   background: #FBFAFE;
-  margin: 100px 10px 0px;
+  margin: 0 10px 0;
   width: 500px;
-  padding: 20px 20px 0px;
+  padding: 20px 20px 0;
 }
 
 h3 {
@@ -60,9 +64,9 @@ h5 {
   font-size: 12px;
   color: #3a393c;
   background: #FBFAFE;
-  margin: 0px 10px;
+  margin: 0 10px;
   width: 500px;
-  padding: 0px 20px 40px;
+  padding: 0 20px 40px;
   border-bottom: #4DE1E1 2px solid;
 }
 
@@ -70,7 +74,7 @@ h6 {
   font-size: 10px;
   color: #3a393c;
   background: #FBFAFE;
-  margin: 0px 10px;
+  margin: 0 10px;
   width: 500px;
   padding: 5px 20px;
 }
