--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h3 {
 }
 
 h4 {
-  text-align: center;
+  text-align: right;
 }
 
 h5 {
@@ -74,7 +74,7 @@ h6 {
   font-size: 10px;
   color: #3a393c;
   background: #FBFAFE;
-  margin: 0 10px;
+  margin: 2px 10px;
   width: 500px;
   padding: 5px 20px;
 }
