--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h1 {
   font-size: 60px;
   color: #3a393c;
   background: #FBFAFE;
-  margin: 0 10px 0;
+  margin: 0 10px 0 0;
   width: 500px;
   padding: 20px 20px 0;
 }
@@ -64,7 +64,7 @@ h5 {
   font-size: 12px;
   color: #3a393c;
   background: #FBFAFE;
-  margin: 0 10px;
+  margin: 0 10px 0 0;
   width: 500px;
   padding: 0 20px 40px;
   border-bottom: #4DE1E1 2px solid;
@@ -74,7 +74,7 @@ h6 {
   font-size: 10px;
   color: #3a393c;
   background: #FBFAFE;
-  margin: 2px 10px;
+  margin: 2px 10px 0 0;
   width: 500px;
   padding: 5px 20px;
 }
