--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ h3 {
 
 h4 {
   text-align: right;
+  margin: 0 0 0 100px;
 }
 
 h5 {
@@ -74,9 +75,9 @@ h6 {
   font-size: 10px;
   color: #3a393c;
   background: #FBFAFE;
-  margin: 2px 10px 0 0;
+  margin: 0 10px 0 0;
   width: 500px;
-  padding: 5px 20px;
+  padding: 8px 20px;
 }
 
 p {
