--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ h3 {
 
 h4 {
   text-align: right;
-  margin: 0 0 0 100px;
+  margin: 10px 0 10px 200px;
 }
 
 h5 {
@@ -77,7 +77,7 @@ h6 {
   background: #FBFAFE;
   margin: 0 10px 0 0;
   width: 500px;
-  padding: 8px 20px;
+  padding: 7px 20px;
 }
 
 p {
