--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@
   height: 100px;
 }
 
+.nav {
+  font-size: 20px;
+  padding: 100px;
+    margin: 20px;
+      text-align: center;
+}
+
 header {
   background: #FBFAFE;
   color: #3a393c;
@@ -32,13 +39,8 @@ header {
 
 footer {
   display: flex;
-  display-margin: 10px;
-  margin: 0;
-  text-align: center;
   background: #FBFAFE;
-  width: auto;
-  font-size: 20px;
-  padding: 100px;
+  height: 100px;
 }
 
 img {
