--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,11 @@
 }
 
 .nav {
-  font-size: 20px;
-  padding: 100px;
-    margin: 20px;
-      text-align: center;
+  font-size: 14px;
+  padding: 10px;
+  margin: 20px;
+  text-align: center;
+  background: #FBFAFE;
 }
 
 header {
@@ -40,7 +41,7 @@ header {
 footer {
   display: flex;
   background: #FBFAFE;
-  height: 100px;
+  margin: 0;
 }
 
 img {
