--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 .nav {
   font-size: 14px;
   padding: 10px;
-  margin: 20px;
+  margin: 10px;
   text-align: center;
   background: #FBFAFE;
 }
@@ -42,6 +42,7 @@ footer {
   display: flex;
   background: #FBFAFE;
   margin: 0;
+  text-align: center;
 }
 
 img {
