--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,16 @@
 }
 
 .menu {
-  width: 1000px;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
+}
+
+.header_line {
+  background: #FBFAFE;
+  margin: 100px 30px;
+  width: 350px;
+  border-top: #4DE1E1 2px solid;
 }
 
 header {
