--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,6 @@
   display: flex;
 }
 
-.header_line {
-  background: #FBFAFE;
-  margin: 100px 30px;
-  width: 350px;
-  border-top: #4DE1E1 2px solid;
-}
-
 header {
   background: #FBFAFE;
   color: #3a393c;
@@ -53,7 +46,7 @@ header {
 
 footer {
   background: #FBFAFE;
-  margin: 0;
+  margin: 0 auto;
 }
 
 img {
