--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 .center {
-  margin:0 auto;
-  max-height: 200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  max-height: 400px;
+  width: auto;
 }
 
 .caption {
@@ -36,7 +40,9 @@
 .two_images {
   display: flex;
   margin: auto;
-  max-height: 200px;
+  max-height: 400px;
+  width: auto;
+  padding: 5px;
 }
 
 header {
