--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  max-height: 400px;
+  height: 400px;
   width: auto;
 }
 
@@ -42,7 +42,6 @@
   margin: auto;
   max-height: 400px;
   width: auto;
-  padding: 5px;
 }
 
 header {
