--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
   width: auto;
 }
 
+.center_small {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .caption {
   text-align: center;
   font-size: 14px;
