--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,9 @@
   text-align: center;
   font-size: 14px;
   font-style: italic;
-  margin-top: 3px;
+  margin-top: 5px;
   color: #4d8ee1
+  padding: 5px;
 }
 
 .homepage {
