pp header fixes

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@
 .personal_profile_header {
   display: flex;
   width: 1000px;
-  margin: 0 100px 0 0;
+  margin: 0 100px 100px 0;
 }
 
 .drone_images {
@@ -77,7 +77,7 @@ header {
   color: #3a393c;
   margin: 100px 30px;
   width: 350px;
-  height: 250px;
+  height: 125px;
   padding: 20px;
 }
 
